# confluence-jira-task-sync

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  config.py  coverage.xml  coverage.xml-q  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generate_confluence_tree.py  generate_env.py  input.xlsx  jta-deployment.yaml  jta-services.yaml  k8s-configmap.yaml  k8s-deployment.yaml  k8s-secret.yaml  load_env.bat  main.py  pyproject.toml  redis-k8s.yaml  requirements.txt  safe_api.py  set_env.bat  test_main.py  test_page_tree.txt  undo_automation.py
.k8-files/: redis-k8s.yaml
api/: safe_confluence_api.py  safe_jira_api.py
input/: sync_request_20250705_231656_tdnguyen.json  sync_request_20250706_105113_test_user.json  sync_request_20250706_115503_tdnguyen.json  sync_request_20250706_132737_test_user.json  user_input.json
interfaces/: api_service_interface.py
models/: data_models.py
output/: automation_results_20250620_164758.xlsx  automation_results_20250620_184423.xlsx  automation_results_20250620_190621.xlsx  automation_results_20250620_192243.xlsx  automation_results_20250623_215931.xlsx  automation_results_20250624_193334.xlsx  automation_results_20250624_194609.xlsx  automation_results_20250624_195359.xlsx  automation_results_20250628_192932.json  automation_results_20250629_102417.json  automation_results_20250629_121958.json  automation_results_20250629_122843.json  automation_results_20250629_140450.json  automation_results_20250629_152014.json  automation_results_20250629_153840.json  generated_pages_20250706_114213.json  generated_pages_20250706_114308.json  generated_pages_20250706_150431.json  sync_20250629_205158_tdnguyen.json  sync_20250629_212720_tdnguyen.json  sync_result_20250629_214449_tdnguyen.json  sync_result_20250629_214701_tdnguyen.json  sync_result_20250629_220947_tdnguyen.json  sync_result_20250629_222753_tdnguyen.json  sync_result_20250629_225016_tdnguyen.json  sync_result_20250629_232138_tdnguyen.json  sync_result_20250705_231707_tdnguyen.json  sync_result_20250706_093901_tdnguyen.json  sync_result_20250706_094824_tdnguyen.json  sync_result_20250706_105729_tdnguyen.json  sync_result_20250706_110825_tdnguyen.json  sync_result_20250706_114537_tdnguyen.json  sync_result_20250706_114608_tdnguyen.json  sync_result_20250706_115621_tdnguyen.json  sync_result_20250706_144709_tdnguyen.json  sync_result_20250706_151351_tdnguyen.json
services/: confluence_service.py  issue_finder_service.py  jira_service.py
src/: dependencies.py  end_to_end_test.py  error_handler_app.py  error_handlers.py  exceptions.py  generate_confluence_tree.py  main.py  sync_task.py  undo_sync_task.py
src/api/: error_handler_api.py  https_helper.py  safe_confluence_api.py  safe_jira_api.py
src/config/: config.py
src/interfaces/: api_service_interface.py  confluence_interface.py  confluence_service_interface.py  history_service_interface.py  issue_finder_interface.py  issue_finder_service_interface.py  jira_interface.py  jira_service_interface.py
src/models/: api_models.py  data_models.py
src/scripts/: e2e_dev_stress_test.py  e2e_dev_test.py  e2e_prod_docker_test.py  e2e_prod_test.py  end_to_end_dev_stress_test.py  end_to_end_dev_test.py  end_to_end_prod_test.py  end_to_end_stress_test.py  end_to_end_test.py  generate_confluence_tree.py  generate_page_tree.py
src/services/: confluence_issue_updater_service.py  confluence_service.py  issue_finder_service.py  jira_service.py
src/services/adaptors/: confluence_service.py  jira_service.py
src/services/business/: issue_finder.py  issue_finder_service.py  redis_service.py
src/services/business_logic/: issue_finder_service.py
src/services/orchestration/: confluence_issue_updater_service.py  sync_project.py  sync_task.py  sync_task_orchestrator.py  undo_sync_task.py  undo_sync_task_orchestrator.py
src/utils/: context_extractor.py  dir_helpers.py  http_client.py  https_helper.py  logging_config.py
tests/: test_context_extractor.py  test_dependencies.py  test_generate_confuence_tree.py  test_main.py  test_orchestrator.py  test_services_and_api.py  test_sync_task.py  test_undo_sync_task.py  test_utils.py
tests/api/: test_https_helper.py  test_safe_confluence_api.py  test_safe_jira_api.py
tests/scripts/: test_generate_confluence_tree.py  test_generate_confuence_tree.py  test_generate_page_tree.py
tests/service/: test_confluence_issue_updater_service.py  test_confluence_service.py  test_issue_finder_service.py  test_jira_service.py
tests/services/adaptors/: test_confluence_service.py  test_jira_service.py
tests/services/business/: test_issue_finder_service.py
tests/services/business_logic/: test_issue_finder_service.py
tests/services/orchestration/: test_confluence_issue_updater_service.py  test_sync_project.py  test_sync_task.py  test_sync_task_orchestrator.py  test_sync_task_orchestrator.pyy  test_undo_sync_task.py  test_undo_sync_task_orchestrator.py
tests/utils/: test_context_extractor.py  test_dir_helpers.py  test_http_client.py  test_logging_config.py
tests/utils/test_data/: real_confluence_page.html
