[tool.poetry]
name = "confluence-jira-task-sync"
version = "0.1.0"
description = "A tool to automate Jira and Confluence synchronization."
authors = ["Nguyen Tuan Dat <tdnguyen@vn.pepperl-fuchs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
# Core application dependencies
pydantic = "^2.5.3"
punq = "^0.7.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
httpx = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.9"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
# Tools for testing, formatting, and linting
pytest = "^8.2.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.2.2"
pre-commit = "^3.6.0"
requests-mock = "^1.12.1"
pytest-cov = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ++ Added Ruff Configuration
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle Error
    "W", # pycodestyle Warning
    "I", # isort
    "B", # flake8-bugbear
]
per-file-ignores = { "tests/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-bugbear]
    extend-immutable-calls = ["Depends", "fastapi.Depends", "fastapi.params.Depends"]

# ++ Updated Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-branch --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
omit = [
    "*/__init__.py", # Excludes all __init__.py files
    "tests/*",       # Excludes all tests
    "venv/*",        # Example: Exclude virtual environment files
]

[tool.coverage.report]
skip_empty = true
