[tool.poetry]
name = "confluence-jira-task-sync"
version = "0.1.0"
description = "A tool to automate Jira and Confluence synchronization."
authors = ["Nguyen Tuan Dat <tdnguyen@vn.pepperl-fuchs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
# Core application dependencies
pydantic = "^2.5.3"
punq = "^0.7.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
httpx = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.9"
tenacity = "^9.1.2"
beautifulsoup4 = "^4.13.0"

[tool.poetry.group.dev.dependencies]
# Tools for testing, formatting, and linting
pytest = "^8.2.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.2.2"
pre-commit = "^3.6.0"
requests-mock = "^1.12.1"
pytest-cov = "^6.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ++ Added Ruff Configuration
[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".mypy_cache",
    ".venv",
    "src/scripts/",
    "end_to_end_test.py",
    "tests/*.py",
]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle Error
    "W", # pycodestyle Warning
    "I", # isort
    "B", # flake8-bugbear
]
per-file-ignores = { "tests/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-bugbear]
    extend-immutable-calls = ["Depends", "fastapi.Depends", "fastapi.params.Depends"]

# ++ Updated Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-branch --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
omit = [
    "*/__init__.py", # Excludes all __init__.py files
    "tests/*",       # Excludes all tests
    "venv/*",        # Exclude virtual environment files
    "src/scripts/*"      # exclude all scripts
]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
# Ignore errors from untyped function definitions
check_untyped_defs = false

# Ignore errors from calling functions defined without annotations
disallow_untyped_calls = false

# Allow function definitions without type annotations
disallow_untyped_defs = false

# Don't follow imports to modules that mypy can't find stubs for (e.g., many third-party libraries)
# This is essential for a smooth start.
ignore_missing_imports = true
