###---PROJECT CONFIGURATION---###

[project]
name = "jira-to-teamspace-automator"
version = "0.1.0"
description = "A tool to automate Jira and teamspace synchronization."
authors = [
    { name = "Nguyen Tuan Dat", email = "tdnguyen@vn.pepperl-fuchs.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic >= 2.5.3",
    "python-dotenv >= 1.0.1",
    "fastapi >= 0.111.0",
    "httpx >= 0.27.0",
    "uvicorn >= 0.35.0",
    "tenacity >= 9.1.2",
    "beautifulsoup4 >= 4.13.0",
    "starlette>=0.47.2",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest >= 8.2.0",
    "pytest-mock >= 3.12.0",
    "pytest-asyncio >= 1.0.0",
    "ruff >= 0.2.2",
    "pre-commit>=3.6.0",
    "requests-mock >= 1.12.1",
    "pytest-cov >= 6.2.0",
    "mypy >= 1.8.0",
    "deptry>=0.23.1",
]

###---TOOLS CONFIGURATION---###

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".mypy_cache",
    ".venv",
    "src/scripts/",
    "end_to_end_*test.py",
    "tests/*.py",
]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle Error
    "W", # pycodestyle Warning
    "I", # isort
    "B", # flake8-bugbear
]
per-file-ignores = { "tests/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["Depends", "fastapi.Depends", "fastapi.params.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-branch --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
omit = [
    "*/__init__.py", # Excludes all __init__.py files
    "tests/*",       # Excludes all tests
    "venv/*",        # Exclude virtual environment files
    "src/scripts/*"      # exclude all scripts
]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
check_untyped_defs = true # Ignore errors from untyped function definitions
disallow_untyped_calls = true # Ignore errors from calling functions defined without annotations
disallow_untyped_defs = true # Allow function definitions without type annotations
ignore_missing_imports = true # Don't follow imports to modules that mypy can't find stubs for (e.g., many third-party libraries)
exclude = [
    "tests/",
    "src/scripts",
    "^venv/", # Exclude a virtual environment folder at the root
]
